--- a/index.html
+++ b/index.html
@@ -497,18 +497,12 @@
         <div class="designer-layout">
           <div class="designer-text">
             <p>
-              QESSEM Collections was created from a simple wish: to make it easy to wear our culture beautifully,
-              in every season of life. In the heart of Century Mall, AFU curates dresses, sets, and kids’ outfits
-              that feel warm, modern, and rooted in Ethiopian tradition.
+             QESSEM Collections is designed and tailored by AFU — the heart of the brand.
+             She creates pieces that feel soft, modern, and rooted in Ethiopian culture.
+
             </p>
             <p>
-              Each piece is chosen with care — how it moves when you walk, how it feels on the skin, how it looks in
-              a photo with the people you love. From kristina and weddings to quiet family days, QESSEM is about
-              celebrating who you are, without feeling rushed or overwhelmed.
-            </p>
-            <p>
-              In the boutique, you’ll find patience, honest guidance, and space to try things on until you see
-              yourself and say, “Yes, this feels like me.”
+              From big celebrations to simple days, every outfit is made to help you feel beautiful and yourself.
             </p>
           </div>
 
@@ -520,9 +514,6 @@
               <div class="designer-quote-mark">“</div>
               <div class="designer-quote">
                 True style is when you feel at peace in what you’re wearing — close to your culture, and still yourself.
-              </div>
-              <div class="designer-quote-am">
-                “በምንም ልብስ ተልባ ሆነም እርስዎን በሰላም ማሰማት ነው እውነተኛ ቅጥ፤ ባህላችንን በመያዝ እና ራስዎን በመሆን።”
               </div>
               <div class="designer-meta">
                 AFU · Founder, QESSEM Collections
